<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22154" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina6_12" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22130"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Locations-->
        <scene sceneID="c7B-0E-jvi">
            <objects>
                <tableViewController storyboardIdentifier="LocationsViewControllerStoryboardID" id="Jlk-mY-Dhb" customClass="LocationsViewController" customModule="WikipediaLocations" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="6cS-bx-eHT">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <view key="tableHeaderView" contentMode="scaleToFill" id="X3h-lP-I3S" userLabel="Header">
                            <rect key="frame" x="0.0" y="0.0" width="393" height="212"/>
                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            <subviews>
                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="mTH-fK-5YH">
                                    <rect key="frame" x="20" y="20" width="353" height="180"/>
                                    <subviews>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter latitude and longitude of desired location or choose location from the list below" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IaB-7m-Etl">
                                            <rect key="frame" x="0.0" y="0.0" width="353" height="36"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                            <nil key="textColor"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="latitude" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="r4G-4c-Vom">
                                            <rect key="frame" x="0.0" y="48" width="353" height="34"/>
                                            <accessibility key="accessibilityConfiguration" identifier="text_field_lat"/>
                                            <constraints>
                                                <constraint firstAttribute="height" constant="34" id="qhz-LF-X6X"/>
                                            </constraints>
                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                            <textInputTraits key="textInputTraits"/>
                                        </textField>
                                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="longitude" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Vfr-3I-ovx">
                                            <rect key="frame" x="0.0" y="94" width="353" height="34"/>
                                            <accessibility key="accessibilityConfiguration" identifier="text_field_lon"/>
                                            <constraints>
                                                <constraint firstAttribute="height" constant="34" id="Jb6-jK-TMu"/>
                                            </constraints>
                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                            <textInputTraits key="textInputTraits"/>
                                        </textField>
                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XQ2-Kk-Yrg">
                                            <rect key="frame" x="0.0" y="140" width="353" height="40"/>
                                            <accessibility key="accessibilityConfiguration" identifier="open_wikipedia_button"/>
                                            <constraints>
                                                <constraint firstAttribute="height" constant="40" id="cee-8a-0MI"/>
                                            </constraints>
                                            <state key="normal" title="Button"/>
                                            <buttonConfiguration key="configuration" style="plain" title="Open in Wikipedia"/>
                                            <connections>
                                                <action selector="tapOnOpenWikipediaButton:" destination="Jlk-mY-Dhb" eventType="touchUpInside" id="jaW-6I-uXz"/>
                                            </connections>
                                        </button>
                                    </subviews>
                                    <constraints>
                                        <constraint firstAttribute="trailing" secondItem="XQ2-Kk-Yrg" secondAttribute="trailing" id="20A-Mf-Q83"/>
                                        <constraint firstAttribute="trailing" secondItem="IaB-7m-Etl" secondAttribute="trailing" id="Nvk-et-B8H"/>
                                        <constraint firstItem="r4G-4c-Vom" firstAttribute="leading" secondItem="mTH-fK-5YH" secondAttribute="leading" id="VLm-em-Z8o"/>
                                        <constraint firstItem="Vfr-3I-ovx" firstAttribute="leading" secondItem="mTH-fK-5YH" secondAttribute="leading" id="akD-hD-o5S"/>
                                        <constraint firstAttribute="trailing" secondItem="Vfr-3I-ovx" secondAttribute="trailing" id="cEi-wC-8gD"/>
                                        <constraint firstItem="IaB-7m-Etl" firstAttribute="leading" secondItem="mTH-fK-5YH" secondAttribute="leading" id="peq-9b-qeY"/>
                                        <constraint firstItem="XQ2-Kk-Yrg" firstAttribute="leading" secondItem="mTH-fK-5YH" secondAttribute="leading" id="ry9-Lu-GXY"/>
                                        <constraint firstAttribute="trailing" secondItem="r4G-4c-Vom" secondAttribute="trailing" id="wBL-U9-2sU"/>
                                    </constraints>
                                </stackView>
                            </subviews>
                            <color key="backgroundColor" systemColor="systemGray6Color"/>
                            <constraints>
                                <constraint firstItem="mTH-fK-5YH" firstAttribute="top" secondItem="X3h-lP-I3S" secondAttribute="top" constant="20" id="B8y-v4-pLV"/>
                                <constraint firstAttribute="trailing" secondItem="mTH-fK-5YH" secondAttribute="trailing" constant="20" id="bXS-6w-C4f"/>
                                <constraint firstItem="mTH-fK-5YH" firstAttribute="leading" secondItem="X3h-lP-I3S" secondAttribute="leading" constant="20" id="xAb-Jw-hT3"/>
                                <constraint firstAttribute="bottom" secondItem="mTH-fK-5YH" secondAttribute="bottom" constant="12" id="y3a-fw-VTv"/>
                            </constraints>
                        </view>
                        <activityIndicatorView key="tableFooterView" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" id="E5v-1h-n3z">
                            <rect key="frame" x="0.0" y="333.66666793823242" width="393" height="44"/>
                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                        </activityIndicatorView>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="LocationCell" textLabel="6yF-eb-MJL" detailTextLabel="v47-xC-kV5" style="IBUITableViewCellStyleSubtitle" id="kiq-H4-u6I">
                                <rect key="frame" x="0.0" y="262" width="393" height="43.666667938232422"/>
                                <autoresizingMask key="autoresizingMask"/>
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="kiq-H4-u6I" id="vbp-6P-WsS">
                                    <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="6yF-eb-MJL">
                                            <rect key="frame" x="20" y="6.0000000000000009" width="25" height="14.333333333333334"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
                                            <nil key="textColor"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="v47-xC-kV5">
                                            <rect key="frame" x="19.999999999999996" y="22.333333333333336" width="43.666666666666664" height="14.333333333333334"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
                                            <nil key="textColor"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                    </subviews>
                                </tableViewCellContentView>
                            </tableViewCell>
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="Jlk-mY-Dhb" id="waA-BQ-uPI"/>
                            <outlet property="delegate" destination="Jlk-mY-Dhb" id="tCL-ie-rer"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Locations" id="v5X-wt-CII"/>
                    <connections>
                        <outlet property="latTextField" destination="r4G-4c-Vom" id="X5e-N7-utT"/>
                        <outlet property="loadingIndicator" destination="E5v-1h-n3z" id="7oa-bD-dQI"/>
                        <outlet property="lonTextField" destination="Vfr-3I-ovx" id="ky5-0d-E8U"/>
                    </connections>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="80V-7b-kii" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1761" y="-10"/>
        </scene>
    </scenes>
    <resources>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
        <systemColor name="systemGray6Color">
            <color red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </systemColor>
    </resources>
</document>
