...
    
    private func showErrorAlert(_ error: Error) {
        let title = "Error"
        let message = self.description(for: error)
        
        let alertController = UIAlertController(title: title, message: message, preferredStyle: .alert)
        alertController.view.accessibilityIdentifier = "error_alert"
        
        let okAction = UIAlertAction(title: "Ok", style: .cancel, handler: nil)
        alertController.addAction(okAction)
        
        present(alertController, animated: true, completion: nil)
    }

    private func description(for error: Error) -> String {
...
